# siera-stick

./: Cargo.toml  build.rs
src/: main.rs
ui/: hello.slint
